<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.WelcomeActivity">

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="209dp"
        android:layout_height="220dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_welcome" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_welcome">

        <TextView
            android:id="@+id/txt_welcome_tit"
            android:alpha="0"
            tools:alpha="100"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/welcome_tit"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/txt_welcome_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:fontFamily="@font/nunito_semibold"
            android:paddingTop="6dp"
            android:text="@string/welcome_des"
            tools:alpha="100" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_welcome_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/welcome_btn_1"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_welcome_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/welcome_btn_2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome_or"
        tools:alpha="100" />

    <TextView
        android:id="@+id/txt_welcome_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="177dp"
        android:alpha="0"
        android:fontFamily="@font/nunito_light"
        android:text="OR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_welcome_login"
        tools:alpha="100" />

</androidx.constraintlayout.widget.ConstraintLayout>